tester/testsuite/bad/bad032.jl
int main() { 
    boolean b=false;
    if(b);
    else return 0;
}
